# tidal-dl-spotifyplst

./: .env.example  .gitignore  GAMEPLAN.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
scripts/: auto_reschedule.sh  fetch_qobuz_ids.py  progress.sh  schedule_downloads.py
spotify_to_tidal/: __init__.py  __main__.py  auth.py  cli.py  config.py  downloader.py  git_version.py  manifest.py  matcher.py  organizer.py  pipeline.py  playlists.py  qobuz.py  spotify.py  tidal.py  tidarr_mgmt.py  transcode.py
spotify_to_tidal/downloaders/: __init__.py  factory.py  qobuz.py  squidwtf.py  tidarr.py  tiddl.py
tests/: test_manifest_and_downloader.py  test_matcher.py  test_multi_source.py  test_none_artist_regression.py  test_spotify_none_handling.py  test_squidwtf_downloader.py
